# projects

./: "HSE_linalg_Lab_Summer_2022_2023_siui".ipynb  Data_analysis_in_economics.ipynb  Data_analysis_in_economics_1.ipynb  HSE_Linalg_Lab_Fall_2022_siui.ipynb  HSE_Linalg_Lab_Spring_2023_siui.ipynb
javascript_kinopoisk_project/1-search/: 1-search.css  1-search.html
javascript_kinopoisk_project/2-more_history/: more-history.html  more_history.css
javascript_kinopoisk_project/2-search_active/: 2-search_active.css  2-search_active.html
javascript_kinopoisk_project/3-search_live/: 3-search_live.css  3-search_live.html
javascript_kinopoisk_project/4-search_not_found/: 4-search_not_found.css  4-search_not_found.html
javascript_kinopoisk_project/5-scroll/: scroll.css  scroll.html
javascript_kinopoisk_project/final/: index.html  key.js  script.js  style.css
С++_image_processor/: CMakeLists.txt  apply_filter.cpp  apply_filter.h  blur.cpp  blur.h  crop.cpp  crop.h  edge.cpp  edge.h  exceptions.cpp  exceptions.h  filter.h  grayscale.cpp  grayscale.h  image_processor.cpp  matrix.cpp  matrix.h  negative.cpp  negative.h  parser.cpp  parser.h  picture.cpp  picture.h  reader.cpp  reader.h  sharp.cpp  sharp.h  writer.cpp  writer.h
